# tibber-api

./: Cargo.toml  build.rs
graphql/: tibber.graphql
graphql/query/: homes.graphql  wsSubscriptionUrl.graphql
graphql/subscription/: measurement.graphql
src/: lib.rs
src/gql/: mod.rs
src/gql/query/: mod.rs
src/gql/subscription/: mod.rs
src/subscription/: mod.rs
tests/: main.rs
